# RiboNN

./: .gitignore  README.md  pyproject.toml
src/RiboNN/: main.py  model.py  predict.py  train.py  transfer_learning.py
